[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/btn_select_icon.png" type="Texture" id=2]
[ext_resource path="res://objects/ui/SubButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 51.0

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_bottom = 3
font_data = ExtResource( 1 )

[node name="SubButton" type="Button"]
margin_right = 175.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Test button"
flat = true
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -13.0
margin_right = 173.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 5

[node name="TimerPressedFocused" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
__meta__ = {
"_editor_description_": "activado cuando hay focus o press"
}
[connection signal="focus_entered" from="." to="." method="_on_SubButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SubButton_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_SubButton_pressed"]
